[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rundeck-mcp-server"
version = "0.1.0"
description = "MCP server for Rundeck API integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "asklokesh", email = "49921737+asklokesh@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "rundeck", "automation", "llm"]
dependencies = [
    "mcp>=1.27,<2",
    "httpx>=0.27.1,<1.0.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.scripts]
rundeck-mcp = "rundeck_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rundeck_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
